feat: feasibility verified

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	<body>
 		<div class="container">
 			<header>
-				<h1>Electron boilerplate</h1>
+				<h1>MultiCopy</h1>
 				<p></p>
 			</header>
-			<section class="main"></section>
+			<section id="root"></section>
 			<footer></footer>
 		</div>
+
+		<script src="./renderer.js"></script>
 	</body>
 </html>
