feat: priminitively finished

--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<div class="container">
-			<header>
-				<h1>MultiCopy</h1>
-				<p></p>
-			</header>
-			<section id="root"></section>
-			<footer></footer>
+		<div id="root">
+
 		</div>
 
 		<script src="./renderer.js"></script>
